ДЗ ред исправлены замечания
Замечания :
1. Зачем задали "width: 696px;" для секции "hero" ?
2. Нигде в макете нет стандартного декорирования ссылок. Уберите его (a {text-decoration: none;}).
3. Ссылки на лого ведут на 404, уберите лишние кавычки.
4. Текстовые блоки "портфолио" в макете - белые на синем фоне, а не серые на белом.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,14 @@
 /* --------------------------------------------- global preferences -------------------- */
 
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 :root {
   --primary-text-color: #757575;
   --text-title-color: #212121;
@@ -12,10 +21,11 @@
 }
 
 body {
+  margin: 0;
+
   background-color: #ffffff;
   font-family: Roboto, sans-serif;
   font-weight: normal;
-
   font-size: 14px;
   line-height: 1.71px;
   letter-spacing: 0.03rem;
@@ -25,16 +35,29 @@ body {
 /* --------------------------------------------- common classes----------------------- */
 .list {
   list-style: none;
+  /* margin: 0; */
+  /* padding: 0; */
 }
 
 .container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: content-box;
 }
 
 .section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
   color: var(--primary-text-color);
 }
 
 .section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
   color: var(--text-title-color);
 
   font-weight: bold;
@@ -44,10 +67,20 @@ body {
   letter-spacing: 0.03rem;
 }
 
+.no-padding {
+  padding-bottom: 0;
+}
+
+a {
+  text-decoration: none;
+}
 /* ____________________________________________  studio  ____________________________ */
 
 /* --------------------------------------------- header ------------------------------- */
-
+header {
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
 /* ----------------logo------------------------- */
 .logo {
   color: #2196f3;
@@ -60,29 +93,48 @@ body {
   text-decoration: none;
 }
 
-.logo-studio {
+.logo-right {
   color: var(--text-title-color);
 }
+.logo-reverse {
+  color: #ffffff;
+}
 /* ----------------nav and contact us--------------------------- */
-
+.main-nav {
+  /* display: flex; */
+  /* background-color: red; */
+}
+.site-nav {
+  /* display: flex; */
+}
+/* ------------+++++++++++++++++++++ */
 .header-text-style {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02rem;
+}
+.header-contact-style {
+  color: #2196f3;
+  color: var(--accent-color);
+}
+/* ++++++++++++++++++++++++++++++++++ */
+
+.site-nav li {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02rem;
-  text-decoration: none;
 }
 
 .nav-style {
   color: var(--text-title-color);
-}
-
-.active-page {
-  color: var(--accent-color);
+ 
 }
 
 .us {
   color: var(--primary-text-color);
+  
 }
 
 .nav-style:hover,
@@ -90,7 +142,8 @@ body {
 .us:hover,
 .us:focus,
 .footer-us:hover,
-.footer-us:focus {
+.footer-us:focus,
+.current {
   color: var(--accent-color);
 }
 
@@ -102,7 +155,10 @@ body {
 }
 
 .hero-title {
-  width: 696px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
 
   color: #ffffff;
   background: rgba(47, 48, 58, 0.8);
@@ -118,6 +174,10 @@ body {
   line-height: 1.88;
 }
 .button-style {
+  min-width: 136px;
+  padding: 10px 32px;
+  border-radius: 4px;
+
   background-color: var(--bgc-button-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--text-button-color);
@@ -129,6 +189,9 @@ body {
 /* ----------------features -------------------------- */
 
 .text-style-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -138,11 +201,15 @@ body {
 }
 
 .main-text {
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-size: 14px;
   line-height: 1.71;
 }
 /* ----------------our-business ----------------------------- */
 .section .figure {
+  margin: 0em;
   text-align: center;
 }
 
@@ -153,20 +220,31 @@ body {
 /* ----------------our team ---------------------------- */
 .team {
   background-color: var(--secong-bgc);
+  text-align: center;
 }
 .person {
+  width: 270px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #fff;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
 }
 
 .job-title {
+  margin-top: 0;
+  margin-bottom: 16px;
+
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
 
 .name-title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19x;
@@ -174,13 +252,25 @@ body {
   text-transform: none;
 }
 
+/* -------------------------clients---------------------------------------------- */
+.clients {
+  text-align: center;
+}
 /*  -------------------------------------------- footer ----------------------------------- */
 footer {
+  margin: 0;
   padding-top: 45px;
+  padding-bottom: 21px;
   background-color: var(--footer-bgc);
   color: #ffffff;
 }
+
+footer p {
+  margin-top: 0;
+  margin-bottom: 9px;
+}
 .logo-footer {
+  margin-: 0;
   padding: 0;
   color: #ffffff;
 }
@@ -190,9 +280,14 @@ footer {
   font-style: normal;
 }
 .footer-title {
+  margin-bottom: 20px;
   color: #ffffff;
 }
 .footer-us {
+  display: block;
+  margin-bottom: 9px;
+
+  text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
 }
 .copyright {
@@ -203,21 +298,12 @@ footer {
   color: rgba(255, 255, 255, 0.4);
 }
 /* ____________________________________________  portfolio  ______________________________ */
-.portfolio-ref {
-  background-color: var(--secong-bgc);
-  line-height: 1.62;
-  text-align: center;
+
+.navigation {
+  padding-top: 93px;
+  padding-bottom: 50px;
 }
 
-.portfolio-ref:hover,
-.portfolio-ref:focus {
-  background-color: var(--bgc-button-color);
-  color: var(--text-button-color);
-}
-
-.portfolio-hat {
-  color: #ffffff;
-}
 .portfolio-section {
   font-size: 16px;
   line-height: 1.87;
@@ -225,14 +311,60 @@ footer {
   color: var(--primary-text-color);
 }
 
-.portfolio-section-title {
-  font-weight: bold;
+.section-hat {
+  margin: 0;
+  font-size: 0px;
+}
+
+.section-text-title {
+  margin-top: 20px;
+  margin-bottom: 4px;
+
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06rem;
-  color: var(--text-title-color);
+  text-transform: none;
 }
-a {
+
+.section-a {
   color: inherit;
+  text-decoration: none;
 }
-/* ____________________________________________  end portfolio  ________________ */
+
+.section-p {
+  margin-top: 0;
+  margin-bottom: 20px;
+
+  font-size: 16px;
+  line-height: 1.87;
+}
+
+.text-item {
+  margin: 0;
+  padding: 63px 24px;
+
+  font-size: 18px;
+  line-height: 1.56;
+  background-color: rgba(33, 150, 243, 0.9);
+  color: #ffffff;
+}
+
+.ref {
+  margin: 0;
+  border-radius: 4px;
+  border-color: var(--secong-bgc);
+  border: none;
+  padding: 6px 22px;
+
+  background-color: var(--secong-bgc);
+  line-height: 1.62;
+  text-align: center;
+}
+
+.ref:hover,
+.ref:focus {
+  background-color: var(--bgc-button-color);
+  color: var(--text-button-color);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
+}
